--- a/Proyecto_HPC.ipynb
+++ b/Proyecto_HPC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGR7c6a8Lkq3qOVJJjdXZM",
+      "authorship_tag": "ABX9TyMflvV/Ur4UQlIV3rCB18qj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,15 +65,43 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install mpi4py"
+      ],
+      "metadata": {
+        "id": "zGyataBtk9L-",
+        "outputId": "a05ac8f3-7a64-47f4-f1b5-d640e0ef992c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting mpi4py\n",
+            "  Downloading mpi4py-4.1.1-cp312-cp312-manylinux1_x86_64.manylinux_2_5_x86_64.whl.metadata (16 kB)\n",
+            "Downloading mpi4py-4.1.1-cp312-cp312-manylinux1_x86_64.manylinux_2_5_x86_64.whl (1.4 MB)\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.4 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.5/1.4 MB\u001b[0m \u001b[31m13.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m21.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: mpi4py\n",
+            "Successfully installed mpi4py-4.1.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from mpi4py import MPI\n",
         "import numpy as np\n",
         "from collections import Counter\n",
-        "import sys\n"
+        "import sys"
       ],
       "metadata": {
         "id": "0n0FcOSgjzGT"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -94,27 +122,94 @@
         "    from sklearn.decomposition import PCA\n"
       ],
       "metadata": {
-        "id": "iigkleoihFw_",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "52c27289-e0b3-4ebd-8a34-a311299b4bf0"
+        "id": "iigkleoihFw_"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Función de distancia\n",
+        "Devuelve un vector con las distancias euclidianas de cada fila de a hacia b.\n"
+      ],
+      "metadata": {
+        "id": "--wd16p-lDM9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def euclidean_distance(a, b):\n",
+        "    return np.sqrt(np.sum((a - b) ** 2, axis=1))"
+      ],
+      "metadata": {
+        "id": "w4C5uto9kynn"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-            "\u001b[1m170498071/170498071\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 0us/step\n",
-            "Clases seleccionadas: ['0=airplane', '1=automobile', '8=ship']\n",
-            "Dimensiones X_train: (12000, 32, 32, 3) X_test: (3000, 32, 32, 3)\n",
-            "Distribución train: {'airplane': 4000, 'automobile': 4000, 'ship': 4000}\n",
-            "Distribución test : {'airplane': 1000, 'automobile': 1000, 'ship': 1000}\n"
-          ]
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Configuración MPI\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   comm: comunicador global con todos los procesos.\n",
+        "*   rank: id del proceso actual (0 a size-1).\n",
+        "*   size: número total de procesos lanzados (por ej. -np 4 ⇒ 4)."
+      ],
+      "metadata": {
+        "id": "Bk2pUB53ldHP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "comm = MPI.COMM_WORLD\n",
+        "rank = comm.Get_rank()\n",
+        "size = comm.Get_size()"
+      ],
+      "metadata": {
+        "id": "GcKt0l-OlWXS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Parametros\n",
+        "\n",
+        "\n",
+        "\n",
+        "Orden de argumentos:\n",
+        "\n",
+        "  \n",
+        "\n",
+        "*   argv[1] = train_size (opcional; default 1000)\n",
+        "*   argv[2] = test_size  (opcional; default 200)\n",
+        "*   argv[3] = k          (opcional; default 3)\n",
+        "*   argv[4] = num_features (opcional; default 10)"
+      ],
+      "metadata": {
+        "id": "ym55Shohmuxl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_size   = int(sys.argv[1]) if len(sys.argv) >= 2 else 1000\n",
+        "test_size    = int(sys.argv[2]) if len(sys.argv) >= 3 else 200\n",
+        "k            = int(sys.argv[3]) if len(sys.argv) >= 4 else 3\n",
+        "num_features = int(sys.argv[4]) if len(sys.argv) >= 5 else 10"
+      ],
+      "metadata": {
+        "id": "W5dEAL1cmvXz"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
