--- a/Proyecto_HPC.ipynb
+++ b/Proyecto_HPC.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMflvV/Ur4UQlIV3rCB18qj",
+      "authorship_tag": "ABX9TyOsz/Xa10uv53O7gyNjh/qG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,7 +74,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +101,7 @@
       "metadata": {
         "id": "0n0FcOSgjzGT"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "iigkleoihFw_"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,6 +207,196 @@
       ],
       "metadata": {
         "id": "W5dEAL1cmvXz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### DataSet Sintetico\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   Crea un dataset sintético multicategoría (3 clases), solo en rank = 0\n",
+        "*   Se separa en entrenamiento y prueba\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "4sc-v6WoCJju"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if rank == 0:\n",
+        "    X, y = make_classification(\n",
+        "        n_samples=train_size + test_size,\n",
+        "        n_features=num_features,\n",
+        "        n_informative=6,  # Important: informative features\n",
+        "        n_redundant=0,\n",
+        "        n_classes=3,\n",
+        "        random_state=42,\n",
+        "    )\n",
+        "    X_train = X[:train_size]\n",
+        "    y_train = y[:train_size]\n",
+        "    X_test = X[train_size:]\n",
+        "    y_test = y[train_size:]\n",
+        "else:\n",
+        "    X_train = y_train = X_test = y_test = None"
+      ],
+      "metadata": {
+        "id": "sRwBH7hlnVRY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Difusión broadcast del conjunto de prueba"
+      ],
+      "metadata": {
+        "id": "GeJlfwI9DmVs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_test = comm.bcast(X_test, root=0)\n",
+        "y_test = comm.bcast(y_test, root=0)"
+      ],
+      "metadata": {
+        "id": "fNuUB7a9Dn9p"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### División scatter del entrenamiento"
+      ],
+      "metadata": {
+        "id": "m5naCsDYIPIj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "local_train_size = train_size // size\n",
+        "local_X = np.empty((local_train_size, num_features), dtype='float64')\n",
+        "local_y = np.empty(local_train_size, dtype='int')"
+      ],
+      "metadata": {
+        "id": "hS04xypiDohR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t_start = MPI.Wtime()\n",
+        "comm.Scatter(X_train, local_X, root=0)\n",
+        "comm.Scatter(y_train, local_y, root=0)\n",
+        "t_dist = MPI.Wtime()"
+      ],
+      "metadata": {
+        "id": "ToaKgxc-Dp7M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Cómputo local de vecinos"
+      ],
+      "metadata": {
+        "id": "GB6hAEUINIYS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "local_predictions = []\n",
+        "for x in X_test:\n",
+        "    dists = euclidean_distance(local_X, x)\n",
+        "    k_indices = dists.argsort()[:k]\n",
+        "    k_labels = local_y[k_indices]\n",
+        "    local_predictions.append((dists[k_indices], k_labels))\n",
+        "t_comp = MPI.Wtime()"
+      ],
+      "metadata": {
+        "id": "awbab74YDrRW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Recolección (gather) de candidatos"
+      ],
+      "metadata": {
+        "id": "gZDP1FqaNOLc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "all_dists = comm.gather(local_predictions, root=0)\n",
+        "t_gather = MPI.Wtime()"
+      ],
+      "metadata": {
+        "id": "dAAQZNEDDsxi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Fusión global y voto (solo rank 0)"
+      ],
+      "metadata": {
+        "id": "MsO1SVOGNZzD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if rank == 0:\n",
+        "    final_preds = []\n",
+        "    for i in range(test_size):\n",
+        "        all_neighbors = []\n",
+        "        for proc_preds in all_dists:\n",
+        "            all_neighbors.extend(zip(proc_preds[i][0], proc_preds[i][1]))\n",
+        "        all_neighbors.sort(key=lambda x: x[0])\n",
+        "        top_k = [label for _, label in all_neighbors[:k]]\n",
+        "        final_pred = Counter(top_k).most_common(1)[0][0]\n",
+        "        final_preds.append(final_pred)\n",
+        "\n",
+        "    final_preds = np.array(final_preds)\n",
+        "    accuracy = np.mean(final_preds == y_test)\n",
+        "\n",
+        "    print(f\"[Process Count: {size}] Train Size: {train_size} | Test Size: {test_size} | k={k} | d={num_features}\")\n",
+        "    print(f\"Total Time       : {t_gather - t_start:.4f} sec\")\n",
+        "    print(f\"  - Distribution : {t_dist - t_start:.4f} sec\")\n",
+        "    print(f\"  - Computation  : {t_comp - t_dist:.4f} sec\")\n",
+        "    print(f\"  - Gathering    : {t_gather - t_comp:.4f} sec\")\n",
+        "    print(f\"Accuracy         : {accuracy:.4f}\")\n",
+        "    print(f\"Etiquetas reales : {y_test}\")\n",
+        "    print(f\"Predicciones     : {final_preds}\")\n",
+        "\n",
+        "    # Visualize results with PCA (no plotting here, solo ejemplo de uso)\n",
+        "    pca = PCA(n_components=2)\n",
+        "    X_test_2D = pca.fit_transform(X_test)"
+      ],
+      "metadata": {
+        "id": "rnnbfTx4Duey"
       },
       "execution_count": null,
       "outputs": []
